package dev.library.backend.models.enums;

public enum Status {
    BORROWED,
    RETURNED,
    OVERDUE
}
